# ChangeLog for sci-libs/dlib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/ChangeLog,v 1.7 2013/09/09 16:56:44 bicatali Exp $

*dlib-18.4 (09 Sep 2013)

  09 Sep 2013; Sébastien Fabbro <bicatali@gentoo.org> +dlib-18.4.ebuild,
  -dlib-17.49.ebuild, -dlib-18.0.ebuild:
  Version bump

*dlib-18.3 (22 Jul 2013)

  22 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> +dlib-18.3.ebuild:
  Version bump

*dlib-18.0 (07 Feb 2013)

  07 Feb 2013; Sébastien Fabbro <bicatali@gentoo.org> +dlib-18.0.ebuild,
  -dlib-17.48.ebuild:
  Version bump

*dlib-17.49 (15 Jan 2013)

  15 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +dlib-17.49.ebuild,
  -dlib-17.47.ebuild:
  Version bump

*dlib-17.48 (11 Dec 2012)

  11 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> +dlib-17.48.ebuild,
  +files/dlib-17.48-makefile-test.patch, -dlib-17.46.ebuild:
  Version bump. Tests respect user settings

*dlib-17.47 (02 Aug 2012)

  02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> +dlib-17.47.ebuild:
  Version bump. Keyword amd64-linux x86-linux

*dlib-17.46 (07 Jun 2012)

  07 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> +dlib-17.46.ebuild,
  +metadata.xml:
  Initial import