@@ -1,13 +1,13 @@
 DEFINED_PHASES=install prepare test
-DEPEND=test? ( blas? ( virtual/blas ) jpeg? ( virtual/jpeg ) lapack? ( virtual/lapack ) png? ( media-libs/libpng ) X? ( x11-libs/libX11 ) )
+DEPEND=test? ( blas? ( virtual/blas ) jpeg? ( virtual/jpeg ) lapack? ( virtual/lapack ) png? ( media-libs/libpng:0= ) X? ( x11-libs/libX11 ) )
 DESCRIPTION=Numerical and networking C++ library
 EAPI=5
 HOMEPAGE=http://dlib.net/
 IUSE=blas doc examples jpeg lapack png test X
 KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=Boost-1.0
-RDEPEND=blas? ( virtual/blas ) jpeg? ( virtual/jpeg ) lapack? ( virtual/lapack ) png? ( media-libs/libpng ) X? ( x11-libs/libX11 )
+RDEPEND=blas? ( virtual/blas ) jpeg? ( virtual/jpeg ) lapack? ( virtual/lapack ) png? ( media-libs/libpng:0= ) X? ( x11-libs/libX11 )
 SLOT=0
-SRC_URI=mirror://sourceforge/dclib/dlib-18.3.tar.bz2
+SRC_URI=mirror://sourceforge/dclib/dlib-18.5.tar.bz2
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=6b09b5a4de143eb410bd29156941d037
+_md5_=561471ae9f09a67df38c0159d599f948
