@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=virtual/blas hsl? ( sci-libs/coinhsl:0= ) lapack? ( virtual/lapack ) mumps? ( sci-libs/mumps:0=[mpi=] ) virtual/pkgconfig doc? ( app-doc/doxygen[dot] ) test? ( sci-libs/coinor-sample sci-libs/mumps ) mumps? ( virtual/fortran )
+DESCRIPTION=Interior-Point Optimizer for large-scale nonlinear optimization
+EAPI=5
+HOMEPAGE=https://projects.coin-or.org/Ipopt/
+IUSE=doc examples hsl lapack mpi mumps static-libs test
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=EPL-1.0 hsl? ( HSL )
+RDEPEND=virtual/blas hsl? ( sci-libs/coinhsl:0= ) lapack? ( virtual/lapack ) mumps? ( sci-libs/mumps:0=[mpi=] ) mumps? ( virtual/fortran )
+SLOT=0/1
+SRC_URI=http://www.coin-or.org/download/source/Ipopt/Ipopt-3.11.8.tgz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	autotools-utils	fb74970befc9b65ceec689d2ccff3022	eutils	025442f2eecab39ad0b4e541b6e142af	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=b02f7603692030d34854f28f44fb7740
