@@ -2,16 +2,16 @@
 Hash: SHA256
 
 AUX dlib-17.48-makefile-test.patch 1013 SHA256 cf45d4f77525aa33342710705c5fc4024229042768d076b6ca7729c1173683fe SHA512 a1f608db8c630f82ed8839e49c4346117fb554cef680b40549a007fc8587ef576deb3ce2f79274f98a8557e94d4c61fdda6884d1a8e4661e8dfa779f812aceed WHIRLPOOL b3e11e1f0ed1d56dead0dabe19365f99d96fdfb378e5b9e7e09380fd18a0cecb256a4c938099dd11baaae17d6b2028c5eb2697ca37cac02343b2b07bff6f4727
-DIST dlib-18.3.tar.bz2 3158862 SHA256 5542102fa51aac11799b1cea9ddbaf5fe6e384175aa75afdf51c485c772e53c1 SHA512 8e213955beac1c8da3d92010060727d0ed74c6f438d7e74ec3940b660cfe47004f789eb31bd2485b0c36b5235b7ce52b9a921cbe1358ad8f60ef790b7399809c WHIRLPOOL 15bf615faf634c42ad78e02067145a7579383b562e9b9c1078a82d9adfa6a7123cba98c35983dc4a8addf9b789c4602fe236677b7713e8b3caa941800ee260d6
 DIST dlib-18.4.tar.bz2 3393090 SHA256 481b94cbd2d330b93b4461d1dc2848cc49a766710f7158054c2a1a9aba3d4452 SHA512 c452cd39c6761ec2c454bbaa8604a66db37794c4554ceeb1e7cf52d064dc90501b73504c05bb3c36295fc9b5b0c8a1e6a371edc9df67894a46d06266c1aae0f8 WHIRLPOOL 4547f6e44791ea11167089bad67945c9e3a4b3ffd633e0d26e56febf9c9a21a98e2f8f81f99e985013ce6a8b804b432281e722920ae2dfe15e9f273bcdc64627
-EBUILD dlib-18.3.ebuild 1078 SHA256 7df2ab58db3f92ff0f5625cdff9ab943e2931f64fdb59ae1ee98f174f20d7d0f SHA512 477d73fb240407ac379ec0f90af75dab7df692ad31e614b786541ee9bf7d97158212a1726e156171c36dd29e3d8f12571c78789c7105a55c6cd59c3f0e33c936 WHIRLPOOL 7403a82c1d20a1f242f44b962bfabbeaa07fc8cc553040e74d6fd1b433bbf03c1c0681777076177ffbbc96a7fa7ea00e5f4b52563675d669f6864b92f5f5588c
+DIST dlib-18.5.tar.bz2 3493206 SHA256 a40a02f9e89554ff3189696abf04580e76bc39bd8880221e21fc43cb4f669e3b SHA512 116f366f302ca24412c92d125808f8f7cf0e10ba152ee534256461bea3eebe950eb3172e7dfb60af4dc4678c2131af6e1cb5a1baad5a9ac4990d5acc22296bf8 WHIRLPOOL 66a1f10427194d2f28fba12520791760da93436636516eddd241a25275388160ee2f90e4cac575b9eab94819662f5a27a171e322c4c6240ff0054ed00f1b1165
 EBUILD dlib-18.4.ebuild 1078 SHA256 d202808d2092a02f988a6bf94cb573d4ec1ff1eec0ffd1bae9484c5fd0f7c217 SHA512 1bd2613cce11af31cce874d88f1b0ebe4a582c774bdf7b12efc96aa72172866262465a6850f55cfcb50013eb4e57b9f53715f424909a111e27508379616227f2 WHIRLPOOL 10708c95160a5767638ff56d2ba041f8dda15c80617bc44b76cf4e4caaa007e821795ed20e3065fda3905710d23ba0feb702840990f040e18ab42bf236e42a6f
-MISC ChangeLog 1245 SHA256 cc454f0097b5dc1783fa15896cf0ae09b3c213baccc22538069f2f7d0f7aa130 SHA512 a940687ddf91e3606bf0a2be7a9866bff4125d8d8b6bed5ddded80ac11eb3f68a20f81f39fa41f922dc6d70be3ab9e2f209603674836ed8818aa5e2a933f41ea WHIRLPOOL cf424f370fb513ebaba2834e03b4e6046c97077f1220502dc2b9b4057610ef819e6dc8b59e6b07608c3215412606c8538d242ce21a561791b4fa06a474e5e852
+EBUILD dlib-18.5.ebuild 1081 SHA256 1aab222a87454d79c723faae5167f28c4094291c16c8dd6ca3f4eb9c0281bd43 SHA512 eb8cdc71a12b391e98be0f0493fed49044b8d5bf48bc81339869d122df903b35d08d4657c09ea9c2997027a1e9c06e5def43bb82e983fffb70a4a37e8629650a WHIRLPOOL c50c671572cbedda30ddbfcd12187866a8adc26c3cc0ae1ca798f91efb5a8d574049670335f5b87e630b4bb985b62f59b0a7ab34b9e2945c4288d7871b70500a
+MISC ChangeLog 1382 SHA256 21e59b9e0554435de97b0cc7642f11a3e51f8d0dc338fdf29cf5d9b281d5d483 SHA512 1832a45bbe6f36f3ddb1c13872d592a30f7ddd7998a853e58e0e428e4831255cdc0cb84e670a91170c592f527a4e9ffe817611aed2788103b46ebf3e7eb23368 WHIRLPOOL abae2f5aa6e2f8323232547febaf2f68d393188340d7bb6161cfa0428fe05ed56fe6ba5524a17717a32ef69fca1d9d16a260b2a686f29e2165e0420259cc01a3
 MISC metadata.xml 464 SHA256 1a4da5ef4e777fd52db22e7e2b01b2c4cf13be449e22f833373f09c3688a8d90 SHA512 55def7692c3d74337a354cac20f4f5585569f9d9772d07f835331c56659b211d8ef7d211f352c496e7805bbb10ff6a4d4298658f126859719409107b883d4239 WHIRLPOOL eb86f46f5e5f7368b7c66be4e408ba5417245aa47fb6c8f15bc3b56bebb9fd0e3abd3c3e23ec365b0f3b1f9da76ae84a32d372b8c9bb3373e2a14f954cd0d64e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlIt/c0ACgkQ1ycZbhPLE2A/aQCeOIhjJyyGXxSZZqeDmH/PE1RI
-xAgAoK4FeY8AXlnk7C+nB3FpW6NMKhAx
-=xQyS
+iEYEAREIAAYFAlN81noACgkQ1ycZbhPLE2AOpACfbTtpNjj86SqhcyrWlKw/i6Eo
+dlsAn0Q/PxO4OjpaXBLSRl1IiqnxhOoD
+=WCjo
 -----END PGP SIGNATURE-----
