@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/dlib-18.3.ebuild,v 1.1 2013/07/22 16:33:52 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/dlib-18.5.ebuild,v 1.1 2014/05/21 16:38:17 bicatali Exp $
 
 EAPI=5
 
@@ -19,7 +19,7 @@ RDEPEND="
 	blas? ( virtual/blas )
 	jpeg? ( virtual/jpeg )
 	lapack? ( virtual/lapack )
-	png? ( media-libs/libpng )
+	png? ( media-libs/libpng:0= )
 	X? ( x11-libs/libX11 )"
 DEPEND="test? ( ${RDEPEND} )"
 
