@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST Ipopt-3.11.7.tgz 4749511 SHA256 c276555cf913cf9cb32d9b0e4faabc2a21d34b52baf8da132d29f3541323739a SHA512 a9edd33b59c9744dc4e09d709519be1fc3d014cc4f50254402784aa8035d21617323f2879c430245886f2a13165cc81d26779331dc1601f0edfc406953dca56f WHIRLPOOL 709eefc5fd6ec43bbb343bc91ba4f0289e9963b931a3d70d36b3b3cadcb41b5ee01da6e6d743d781fb91bb789fcf45a424d5109291074695019027ff76bba9b1
+DIST Ipopt-3.11.8.tgz 4749758 SHA256 9f9b76075fbd9315286ea4d7c159c94cab4a4fb16122fb172b24910af5b5b75b SHA512 1f60ea769dd7305348af3a5d4ed56938f04e59c36fb7a3fa0b808e4788dccee4711f82c3767e2aae87d21618d2a840d0bb22491c21c40bc2f9ebdf4b3a01aeec WHIRLPOOL a8022439d3509a2d1c7cf7c9c1c97d2ddda6baae948c3628c14a1eae622069ca090647c2e4051ca330d767bc09da7d908005bfb5b021e3277ee4bc1294f33019
 EBUILD ipopt-3.11.7.ebuild 2503 SHA256 6f1c183db00093d8e71aaa286c12cc47e3b16d49e310dab434dc3b13c2f47ea3 SHA512 172b1fc796ec2b12ec746bd5b661a124f42d87ae5b4cabbc886e2ebcfe2df2f2cca6cbaf0042f3094f6b8c4a4bcebc060b3ca8d9db7ec3b4dd66407c478d28eb WHIRLPOOL 220b3c1caab030a105de838cbf7dfe066313a91dec220b6d1ab523d0c21ff785184bbf2ffccbf09f54197111c55f4aa30b1a0d24f03d3f92fb66b6b871613e44
-MISC ChangeLog 531 SHA256 c3d9afcf9dbf4c882ef9fcb4b3f48864cb0024c2eb2276ee8a2e95987702b139 SHA512 0fae52a3a73089ff102d6d2aacb7b87c45925214cbcadf36e0bfb5267995dc9470825018885b385a9c7563bff4e496774d814f837af431c8b6428daa6799c047 WHIRLPOOL f13eb60defa893137a6fd67f44e93e7a6efaa90f6a856a351cab2b84b2ac69e47af844077dfedc05a89df8f8e77e0d2dc94a9ed349cebc0e452330746334c54f
-MISC metadata.xml 759 SHA256 5bbf437a1852a3269ccaf20d4b5ce4bf83926fba2b85a36dd89003337ec96588 SHA512 55c998f8ab08acb31777e3e85c41369b4b6d92d3b18675644c634845987ebbdfa5b76afef9afc8fb6af76e8344dae8c042ff85c17246c58d572a7b3671219ea3 WHIRLPOOL e6764cb2540e1d5f442ee13d354ccacda9f8eaab8117dedbe2286d61fd923c3c9674056fc9b35efc27f7adaf5a1d5f0d39068d7c1335495e4937255b50411a9c
+EBUILD ipopt-3.11.8.ebuild 2514 SHA256 22997d1998bac0c1f4535d2c56c2850008d8f05583203abdfeafb474676f26d7 SHA512 72dcd09bd47f51027c353525f6ba307bff23aefbf7956b9efd3aede2a75a4670b6f8a74036c453c93d66ef0e0662456e09f7c0ea40ed2634d2932dc28c429fdd WHIRLPOOL adc13a7653c0f0f3f821700a6e431095b62a20e3c19eb53b2838d9255d2cc0450194659fff80c6e9cf1b18ea78c92d5b897cdd4aedf85a1a19af7392947b8c07
+MISC ChangeLog 673 SHA256 99b2a78c95b29dbc4fe00bf79b73a0ac95fef4733cdabbb5e44d7ee13d32fe1a SHA512 60c51eb5f12ca144c84a8726e1a895a3078ef4047deda460c468771808386af2656fbe3e9b21f6ee447fee2851ee3e1814f25ec66b0b5c33197eca333cd35c29 WHIRLPOOL cd10e7c2f9940b8f1be0e44878e8ab5a7358b27762fa074a8966d384110c2aafd6c2396bc8fcbf14242eae5781098a73639f7826fcac91b850565f2234a1476e
+MISC metadata.xml 747 SHA256 977008d95161da3946a68c494053b463bdef7951ee2f88224d8aec078ea896f1 SHA512 ffb2bf6ec27b5db556ed1e14f947bbd5f96d51f76ad4db8027f262a2911f33c7110f6dab379373cb6bf12ad9e00b4d9afd1d29e66a80023cfb383ed16bbe3ad4 WHIRLPOOL 0db69af2e09f96af78ade0e8d59b3d84bd6f28384d418a1cea0561e04de2dc645dbbeb315383236736a1db07057d31166f373d7f10daf31063a1a86bcc6dc19e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJS8KXhAAoJELnU8jG9FVirXqcP/iBud/w7Z+3kJZ3TkbUR40EL
-a66fKObuPKk5QkBQyfoogK91VRJBza3KIsCuR5j9gCJAUvWjIykXAuA7RjJ9uFpw
-IVhydEglzAOy0eRQT5b6Xj4jzo4GgFAiY8F9kTRmSLMQr/ogLFAI4c6AHUIMNuz/
-MUh2VAa4sKUfxKK3CqmLu7/9KO0OFc82a1/sb/8DkS7igJuPX9elWnIZthrEkF7Q
-iH1kOZCN1MszLzfWs6HtLwyLBG1MwgVhzwCojb/aS73MZVQvdZchKZCHUtp1BRbZ
-g1xXHuRS7ZC2a7bGZoLG/d4fu+dtuONLJicDND3HivUSSb2l7GjQT+hKCAGhp0nd
-wdjlrs2nyO7er2ZEFLQZFDw1qRJlsSaw6YCdoc0cj9qxaFXQn31oKRgW0iJ7ffSJ
-i7E3ju4CuaPgaVL19FV+fPrMX5BE9LUstNbG9THJklz0bFez/Oe2/4erFAXhM5TI
-EFycyoWI7gSNo66fCvKC+Z75cVLJwrnlERq5om6dnBuJwTVq2e3BjP60DNBhw5em
-ydopJ5g1pusOvVeEye1+uTjJGDjVigRdRRyWrPqASddjsxzFSgheRcFt3q/O6UUp
-VtjjwVTOnCTcgiJrPy5xQ1Z1bE+5i73sXRMo6ZknoXpbZ4kt3L/dVVFx+vWBUtJg
-x/Ki+PGdEapuga7bXXUm
-=VodJ
+iEYEAREIAAYFAlN82I8ACgkQ1ycZbhPLE2DrjwCeK8CWZuaCICcCn/+Nt+JdEMvJ
+hAoAn0VRk5iFfijlAVIJHCsNEgshH1QD
+=oc8/
 -----END PGP SIGNATURE-----
