@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/ipopt
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/ipopt/ChangeLog,v 1.2 2014/02/04 08:33:36 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/ipopt/ChangeLog,v 1.3 2014/05/21 16:47:10 bicatali Exp $
+
+*ipopt-3.11.8 (21 May 2014)
+
+  21 May 2014; Sébastien Fabbro <bicatali@gentoo.org> +ipopt-3.11.8.ebuild,
+  metadata.xml:
+  Version bump
 
   04 Feb 2014; Justin Lecher <jlec@gentoo.org> ipopt-3.11.7.ebuild:
   Fix the common coinor pkg-config installation problem
