@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/dlib
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/ChangeLog,v 1.7 2013/09/09 16:56:44 bicatali Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/dlib/ChangeLog,v 1.8 2014/05/21 16:38:17 bicatali Exp $
+
+*dlib-18.5 (21 May 2014)
+
+  21 May 2014; Sébastien Fabbro <bicatali@gentoo.org> +dlib-18.5.ebuild,
+  -dlib-18.3.ebuild:
+  Version bump
 
 *dlib-18.4 (09 Sep 2013)
 
